--- a/README
+++ b/README
@@ -1,4 +1,15 @@
-This is opentracker. An open bittorrent tracker.
+This is as _WIP_ fork of opentracker (git://erdgeist.org/opentracker), inspired by (https://news.ycombinator.com/item?id=25245455) with the ability to search torrents on the tracker itself that will require libtorrent (getting torrent metadata) and libarmadillo (for search)
+
+
+TODO: 
+    - get hex hash [DONE]
+      - how to store hash (mem or disk)
+    - start download to collect metadata
+    - get metadata
+      - how to store metadata (mem or disk)
+    - add to metdata tf-idf matrix
+    - re build low dimensional space matricies
+    - search look up enpoint
 
 You need libowfat (http://www.fefe.de/libowfat/).
 
@@ -28,3 +39,21 @@ sysctl kern.maxfiles=10240
 License information:
 
 Although the libowfat library is under GPL, Felix von Leitner agreed that the compiled binary may be distributed under the same beer ware license as the source code for opentracker. However, we like to hear from happy customers.
+
+
+Invocation:
+opentracker can be run by just typing ./opentracker. This will make opentracker bind to 0.0.0.0:6969 and happily serve all torrents presented to it. If ran as root, opentracker will immediately chroot to . (or any directory given with the -d option) and drop all priviliges after binding to whatever tcp or udp ports it is requested.
+
+When options were few, opentracker used to accept all of them from command line. While this still is possible for most options, using them is quite unhandy: an example invocation would look like ./opentracker -i 23.23.23.7 -p 80 -P 80 -p 6969 -i 23.23.23.8 -p 80 -r http://www.mytorrentsite.com/ -d /usr/local/etc/opentracker -w mytorrents.list -A 127.0.0.1.
+
+opentracker now uses a config file that you can provide with the -f switch.
+
+
+Closed mode
+
+While personally I like my tracker to be open, I can see that there's people that want to control what torrents to track – or not to track. If you've compiled opentracker with one of the accesslist-options (see Build instructions above), you can control which torrents are tracked by providing a file that contains a list of human readable info_hashes. An example whitelist file would look like
+
+0123456789abcdef0123456789abcdef01234567
+890123456789abcdef0123456789abcdef012345
+
+To make opentracker reload it's white/blacklist, send a SIGHUP unix signal.
