--- a/README
+++ b/README
@@ -6,6 +6,7 @@ TODO:
       - how to store hash (mem or disk)
       	- send hash to global collection queue
     - start download to collect metadata from hash quue [IN PROGRESS]
+    	- add lib curl to make outgoing request for trackers?
     	- figure out how to do this non bloking
 	    - get metadata
 	      - how to store metadata (mem or disk)
