finished sample metadata client

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is as _WIP_ fork of opentracker (git://erdgeist.org/opentracker), inspired by (https://news.ycombinator.com/item?id=25245455) with the ability to search torrents on the tracker itself that will require libtorrent (libtorrent-rasterbar-1.0.3, getting torrent metadata) and libarmadillo (armadillo-9.700.3, for search)
+This is as _WIP_ fork of opentracker (git://erdgeist.org/opentracker), inspired by (https://news.ycombinator.com/item?id=25245455) with the ability to search torrents on the tracker itself that will require libcurl, libtorrent (libtorrent-rasterbar-1.0.3, getting torrent metadata) and libarmadillo (armadillo-9.700.3, for search)
 
 
 TODO: 
